--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -676,26 +676,6 @@
   number = {8}
 }
 
-@article{bowmanWarmerWorldWill2014a,
-  title = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests: Evidence from {{Australian}} Temperate and Subtropical Eucalypt Forests},
-  shorttitle = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests},
-  author = {Bowman, David M. J. S. and Williamson, Grant J. and Keenan, R. J. and Prior, Lynda D.},
-  date = {2014},
-  journaltitle = {Global Ecology and Biogeography},
-  volume = {23},
-  pages = {925--934},
-  issn = {1466-8238},
-  doi = {10.1111/geb.12171},
-  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/geb.12171},
-  urldate = {2021-06-09},
-  abstract = {Aims Understanding how tree growth is influenced by climate is vital for predicting how forests will respond to climate change, yet there have been few studies of tree growth spanning macroclimatic gradients. The aim of this study is to correlate growth of a single lineage of broadleaf evergreen trees with continental-scale variability in climate. Location Australia's temperate mesic eucalypt forests, spanning latitudes from 23 to 43° S and longitudes from 115 to 153° E. Methods We compiled and analysed a dataset containing around half a million measurements of growth in eucalypt tree diameter, collected from 2409 permanent forestry plots. These plots spanned a range of 558–2105 mm mean annual precipitation and 6–22 °C mean annual temperature. Generalized additive models were used to study the relationship between growth in tree diameter and several temperature and water availability variables. Results Tree growth increased with precipitation, but with a diminishing response above a mean annual precipitation of 1400 mm. There was a peaked response to temperature, with maximum growth occurring at a mean annual temperature of 11 °C and maximum temperature of the warmest month of 25–27 °C. Lower temperatures directly constrain growth. High temperatures primarily reduced growth by reducing water availability, but they also appeared to exert a direct negative effect. Our best model, which included maximum temperature of the warmest month and the ratio of precipitation to evaporation, explained 28\% of the deviance. Main conclusions The productivity of Australia's temperate eucalypt forests could decline substantially as the climate warms, given that 87\% of these forests currently experience a mean annual temperature above 11 °C, where the highest growth rates were observed. This will reduce carbon sequestration and slow recovery after catastrophic disturbances such as wildfire.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12171},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\G2HSGCWG\\Bowman et al. - 2014 - A warmer world will reduce tree growth in evergree.pdf;C\:\\Users\\Me\\Zotero\\storage\\WLD6L796\\geb.html},
-  keywords = {Climatic gradients,macroecology,precipitation,temperature,tree growth,water availability},
-  langid = {english},
-  number = {8}
-}
-
 @article{brasseurEXTINCTIONRAYONNEMENTDANS1976,
   title = {L'{{EXTINCTION DU RAYONNEMENT DANS LES GAMMES SPECTRALES BLEU}}, {{ROUGE ET ROUGE LOINTAIN}}. {{COMPARAISON DE DEUX PEUPLEMENTS FORESTIERS DE HAUTE ARDENNE}}},
   author = {BRASSEUR, F. and DE SLOOVER, J. R.},
@@ -3201,6 +3181,25 @@
   langid = {english}
 }
 
+@article{kleinStomatalSensitivityCO22019,
+  title = {Stomatal Sensitivity to {{CO2}} Diverges between Angiosperm and Gymnosperm Tree Species},
+  author = {Klein, Tamir and Ramon, Uria},
+  date = {2019},
+  journaltitle = {Functional Ecology},
+  volume = {33},
+  pages = {1411--1424},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.13379},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.13379},
+  urldate = {2021-06-12},
+  abstract = {The response of tree leaf gas exchange to elevated CO2 concentrations has been investigated in numerous experiments along the past 30 years. Stomatal regulation is a major plant control over leaf gas exchange, and the response to the increasing CO2 will shape the biological activity of forests in the future. Here, we collected 144 records from 57 species on stomatal conductance in CO2 manipulation experiments on trees (340–980 ppm CO2). CO2-induced stomatal downregulation was calculated as the slope of the linear regression between stomatal conductance and [CO2]. Among tree species, the slope (a) of change in stomatal conductance per 100 ppm CO2 increase ranged between 0 and −151, indicating stomatal downregulation, and only four species showed upregulation. There was a significant divergence between evergreen gymnosperms (a = −3.6 ± 1.0), deciduous angiosperms (a = −16.3 ± 3.1) and evergreen angiosperms (a = −32.8 ± 7.1). Gymnosperms were less sensitive to CO2 changes than deciduous angiosperms even when considering only field experiments. The significant role of tree functional group in predicting CO2-induced stomatal downregulation was detected in multiple mixed-effect models, with p values ranging between 0.0002 and 0.0295. The significantly higher stomatal sensitivity to CO2 of angiosperms versus gymnosperms might be related to the overall higher stomatal conductance of angiosperms; their thinner leaves, in turn losing water faster; and the decreasing atmospheric [CO2] at the time of their taxa diversification. We conclude that species differences must be taken into account in forecasting future forest fluxes. A plain language summary is available for this article.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.13379},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CYEBZ3BY\\Klein and Ramon - 2019 - Stomatal sensitivity to CO2 diverges between angio.pdf;C\:\\Users\\Me\\Zotero\\storage\\TBKM89MG\\1365-2435.html},
+  keywords = {biome,deciduous,evergreen,leaf thickness,stomatal conductance,stomatal downregulation},
+  langid = {english},
+  number = {8}
+}
+
 @article{kochDiurnalPatternsLeaf1994,
   title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
   shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
@@ -3216,22 +3215,6 @@
   abstract = {Diurnal patterns of leaf conductance, net photosynthesis and water potential of five tree species were measured at the top of the canopy in a tropical lowland rain forest in southwestern Cameroon. Access to the 40 m canopy was by a large canopy-supported raft, the Radeau des Cimes. The measurements were made under ambient conditions, but the raft altered the local energy balance at times, resulting in elevated leaf temperatures. Leaf water potential was equal to or greater than the gravitational potential at 40 m in the early morning, falling to values as low as –3.0 MPa near midday. Net photosynthesis and conductance were typically highest during midmorning, with values of about 10–12 μmol CO2 m−2 s−1 and 0.2–0.3 mol H2O m−2 s−1, respectively. Leaf conductance and net photosynthesis commonly declined through midday with occasional recovery late in the day. Photosynthesis was negatively related to leaf temperature above midday air temperature maxima. These patterns were similar to those observed in other seasonally droughted evergreen communities, such as Mediterranean-climate shrubs, and indicate that environmental factors may cause stomatal closure and limit photosynthesis in tropical rain forests during the midday period.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\8CNP6YYB\\Koch et al. - 1994 - Diurnal patterns of leaf photosynthesis, conductan.pdf},
   number = {4}
-}
-
-@article{kochLimitsTreeHeight2004,
-  title = {The Limits to Tree Height},
-  author = {Koch, George W. and Sillett, Stephen C. and Jennings, Gregory M. and Davis, Stephen D.},
-  date = {2004-04},
-  journaltitle = {Nature},
-  volume = {428},
-  pages = {851--854},
-  issn = {0028-0836, 1476-4687},
-  doi = {10.1038/nature02417},
-  url = {http://www.nature.com/articles/nature02417},
-  urldate = {2021-04-16},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\SBJNCJW4\\Koch et al. - 2004 - The limits to tree height.pdf},
-  langid = {english},
-  number = {6985}
 }
 
 @article{kochLimitsTreeHeight2004a,
