--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5210,6 +5210,25 @@
   number = {12}
 }
 
+@article{niinemetsShapeLeafPhotosynthetic1999a,
+  title = {Shape of Leaf Photosynthetic Electron Transport versus Temperature Response Curve Is Not Constant along Canopy Light Gradients in Temperate Deciduous Trees},
+  author = {Niinemets, Ü and Oja, V. and Kull, O.},
+  date = {1999},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {22},
+  pages = {1497--1513},
+  issn = {1365-3040},
+  doi = {10.1046/j.1365-3040.1999.00510.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-3040.1999.00510.x},
+  urldate = {2021-06-12},
+  abstract = {Responses of foliar light-saturated net assimilation rate (Amax), capacity for photosynthetic electron transport (Jmax) and mitochondrial respiration rate (Rd) to long-term canopy light and temperature environment were investigated in a temperate deciduous canopy composed of Populus tremula L. in the upper (17–28 m) and of Tilia cordata Mill. in the lower canopy layer (4–17 m). Climatic measurements indicated that seasonal average daily maximum air temperature (Tmax) was 5·5 °C (range 0·7–10·5 °C) higher in the top than in the bottom of the canopy, and strong positive correlations were observed between Tmax and seasonal average integrated quantum flux density (Qint), as well as between seasonal average daily mean temperature and Qint. Because of changes in leaf dry mass and nitrogen per unit area, Amax, Jmax, and Rd scaled positively with Qint in both species at a common leaf temperature (T). According to Jmax versus T response curves and dark chlorophyll fluorescence transients, photosynthetic electron transport was less heat resistant in P. tremula with optimum temperature of Jmax, Topt, of 33·5 ± 0·6 °C than in T. cordata with Topt of 40·7 ± 0·6 °C. This difference was suggested to manifest evolutionary adaptation of photosynthetic electron transport to cooler environments in P. tremula, the range of which extends farther north than that in T. cordata. Possibly because of acclimation to long-term canopy temperature environment, Topt was positively related to Qint in P. tremula, foliage of which was also exposed to higher irradiances and temperatures, but not in T. cordata, in the canopy of which quantum flux densities and temperatures were lower, and gradients in the environmental factors less pronounced. Parallel to changes in Topt, the activation energy for photosynthetic electron transport decreased with increasing Qint in P. tremula, indicating that Jmax of leaves acclimated to colder environment was more responsive to T in lower temperatures than that of high T acclimated leaves. Similar alterations in the activation energy for mitochondrial respiration rate were also observed, indicating that acclimation to temperature of mitochondrial and chloroplastic electron transport proceeds in a co-ordinated manner, and possibly involves long-term changes in membrane fluidity properties. We conclude that, because of correlations between temperature and light, the shapes of Jmax versus T, and Rd versus T response curves vary within tree canopies, and this needs to be taken account in modelling whole canopy photosynthesis.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-3040.1999.00510.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\43SFH6ES\\Niinemets et al. - 1999 - Shape of leaf photosynthetic electron transport ve.pdf;C\:\\Users\\Me\\Zotero\\storage\\VF2QFMZK\\j.1365-3040.1999.00510.html},
+  keywords = {chlorophyll fluorescence,feedback limitations,light gradients,photosynthetic electron transport,Populus tremula,temperature acclimation,Tilia cordata},
+  langid = {english},
+  number = {12}
+}
+
 @incollection{niinemetsStructuralDeterminantsLeaf2006,
   title = {Structural Determinants of Leaf Light-Harvesting Capacity and Photosynthetic Potentials},
   booktitle = {Progress in {{Botany}}},
