--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -153,7 +153,7 @@ LAD along the vertical gradient is heterogeneous, with common patterns that vary
 This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests, than open canopy forests such as needle-leaf forests [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 
-**Wind speeds are also higher at the top of the canopy, owing to... [@juckerCanopyStructureTopography2018].**
+**Wind speeds are also higher at the top of the canopy, owing to height of the canopy [@juckerCanopyStructureTopography2018].**
 Wind speed increase with height across forest types from closed-canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] to open savannas [@curtis_intracanopy_2019], including all **#** forested NEON sites. 
 Specifically, across the NEON sites, July maximum daily wind speeds averaged up to **~4** m s^-1^ higher at the top of the NEON vertical profile than at the bottom, where maximum wind speeds consistently averaged < **#** m s^-1^ (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and associated potential for loss of both water and heat (see next section).
@@ -164,13 +164,13 @@ Typically, dense canopies buffer understories from maximum $T_{air}$ relatively 
 
 **Relative humidity, $RH$, is generally highest in the understory and decreases with height across the vertical profile [Fig. `r fig_NEON_vertical`; e.g., @mcgregor_tree_nodate].**
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
-In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from a leaf, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Additionally, increase in canopy height and LAI, upto a certain height, can also lower maximum $T_{air}$ and VPD in the understory [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
+In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from a leaf, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Additionally, increase in canopy height and LAI contributes to lowering maximum $T_{air}$ and VPD in the understory [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
 
 **Atmospheric carbon dioxide (CO~2~) concentrations tend to be higher near ground level at night, but largely dissipate during the day [@koike_leaf_2001; @yang_spatial_1999].** 
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
 
 **The buffering patterns described above vary geographically, seasonally, and across forests types [REFS; *Defrenne et al. 2021*].**
-The strength of buffering in high elevation with forest type, in some cases decreases when (**THIS WILL NOT ALWAYS BE TRUE!--e.g., semi-arid regions where forest cover increases with elevation**) moving to open-forests , and increases with canopy density [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018]. Buffering capacity is also greater in wetter than drier regions [**REF**] and increases with proximity to water, for example in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
+The strength of buffering in high elevation, in some cases, decreases when (**THIS WILL NOT ALWAYS BE TRUE!--e.g., semi-arid regions where forest cover increases with elevation**) moving to open-forests, and increases with canopy density [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018]. Buffering capacity is also greater in wetter than drier regions [**REF**] and increases with proximity to water, for example in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
 Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in wet seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018**double check these refs--at least one didn't belong**].
 
 ## Leaf temperature 
@@ -211,7 +211,7 @@ Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more
 Under other conditions $T_{leaf}$ tracks $T_{air}$, due to high evapotranspiration and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
-Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Comparing forests, upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018] . At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
+Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Comparing forests, upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018] . At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 
 ## Leaf traits 
 
@@ -225,7 +225,7 @@ Isolating height (>35m) from light shows that, canopy $gs$ decreases with increa
 Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research that is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
-Leaf trait comparison within an individual tree of the same species, here, is referred to as intraspecific variation, and comparison of traits between species of multiple trees is referred to as interspecific variation. 
+Leaf trait comparison within an individual tree of the same species, here, is referred to as within-canopy intraspecific variation, and comparison of traits between species of multiple trees is referred to as interspecific variation. 
 
 Therefore, across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
@@ -234,9 +234,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-canopy leaf traits vary--from shaded canopy position to exposed positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits`, summarizes relevant traits for thermal sensitivity. Further, the need for research to characterize trait relationships and responses through the vertical canopy is becoming a need, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy leaf traits vary--along the canopy light gradient, ie. in sun and shade leaves [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits`, summarizes relevant traits for thermal sensitivity. Further, the need for research to characterize trait relationships and responses through the vertical canopy is becoming a need, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
-On another note, along the ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ are observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. 
+Intraspecific traits also vary along the ontogeny of the same species in canopy and understory, for example, LMA, photosynthetic capacity [per area] and $gs$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000].  
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -251,26 +251,28 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with structural strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves have lower convective cooling strategies, and invest more in light capture [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous canopy light conditions, sun-leaf differences in canopy orientations are shaped by canopy $T_{air_{max}}$ and $VPD$ stress than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with structural strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves have lower convective cooling strategies, and invest more in light capture [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous canopy light conditions, sun-leaves in different canopy orientations are primarily shaped by differences in $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical and physiological traits
 
-These traits protect leaves along the vertical profile from photo-damage and heat stress, and are crucial to the functioning of photosynthesis and metabolism. Biochemically, caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light to heat dissaptaion [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Evidence also shows that $VAZ$ enables leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. Along with $VAZ$, Narea optimizes to prevent photo-inhibition during direct light and sunflecks in sun- and shade leaves, respectively, and is typically greater in the direction of new leaf growth [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
-
-### Interspecific variation 
-
-Widely, across forest species, the pattern of fundamental trait adaptation to light gradients is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, trait plasticity can vary several-folds between  multi-species canopy and in understory species,  based on their inherent specie-specific traits and environmental conditions. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Therefore, collectively, $T_{leaf}$ differs across specie-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Biochemical protection against foliage light and heat damage increases with irradiance.
+Caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light into heat [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998], this is particularly important for leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. N and P are crucial for photosynthetic and metabolic processes along with $VAZ$, as they contribute to enzyme formation and function, such as in Rubisco. $N_{area}$ increases in the direction of new leaf growth, where it optimizes to prevent photoinhibition in leaves vertically [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
 
 ##### *Leaf lifespan*  
 
-New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in longterm-light for mature leaves can result in leaf abscission [Niinemetes, 2007; *REFS*]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
+New-leaf growth in response to the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in longterm-light for mature leaves can result in leaf abscission [Niinemetes, 2007; *REFS*]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
+
+### Interspecific variation 
+
+Widely, across forest species, the pattern of fundamental trait adaptation to light gradients is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, trait plasticity can vary several-folds between  multi-species canopy and in understory species, including at an intraspecific level,  based on their inherent specie-specific traits and responses to environmental conditions. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Therefore,  $T_{leaf}$ differs at an intra- and inter-specific levels with traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 ##### *Deciduousness*
 
 Deciduousness as a trait is an adaptation to conserve water under stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among tropical species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000c]. In deciduous-temperate forests, spatio-temporal leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999].Therefore, deciduous leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient [@rey-sanchez_spatial_2016]. 
+
 
 ## Leaf metabolism and thermal responses
 
@@ -289,8 +291,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steep in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. However, $T_{opt}$ of $gs$ doesnot vary between sun and shade leaves [Slot et al. 2019]. The diurnal $gs$ pattern and resulting $A_{max}$ varies between species, such as early- and late-successional [@ishiiExploringRelationshipsCanopy2004a], and between gymnosperms and angiosperms [@bonan_ecological_2016].
-
+Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. However, $T_{opt}$ of $gs$ doesnot vary between sun and shade leaves [Slot et al. 2019]. The diurnal $gs$ pattern and resulting $A_{max}$ varies between species, for example, $gs$ is greater in angiosperms than gymnosperms [@bonan_ecological_2016; @kleinStomatalSensitivityCO22019].
 ### Photosynthesis
 
 **Photosynthesis is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
@@ -301,7 +302,7 @@ In response to the greater light availability, sun-leaves have traits allowing g
 Temperature can affect photosynthesis via direct and indirect pathways. Direct, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increase in $T_{leaf}$ from $gs$ closure that is driven by biophysical factors [@lloydEffectsRisingTemperatures2008]. $T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
+Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
 
 Interestingly, within canopy Japanese oak sun and shade leaves under respective peak light conditions were found to maintain similar rate of excess energy production. Excessive light energy not utilized can cause photoinhibition.Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain high photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realizes similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
 
